--- a/.github/workflows/ci-submodule.yml
+++ b/.github/workflows/ci-submodule.yml
@@ -29,12 +29,13 @@ jobs:
       build_result: ${{ steps.build.outcome }}
     strategy:
       matrix:
-        target: ['armv7a7-imx6ull-evk', 'armv7a9-zynq7000-qemu', 'armv7a9-zynq7000-zedboard', 'armv7a9-zynq7000-zturn', 'armv7m4-stm32l4x6-nucleo', 'armv7m7-imxrt105x-evk', 'armv7m7-imxrt106x-evk', 'armv7m7-imxrt117x-evk', 'host-generic-pc', 'ia32-generic-pc', 'ia32-generic-qemu', 'riscv64-generic-qemu', 'riscv64-generic-spike', 'sparcv8leon3-gr716-mini']
+        target: ['host-generic-pc', 'host-generic-pilot']
         include:
-          - target: 'ia32-generic-qemu'
-            syspage: 'psh pc-ata uart16550'
           - target: 'armv7a9-zynq7000-qemu'
             additional_params: 'ports'
+          - target: 'armv7a9-zynq7000-vpilot'
+            additional_params: 'ports'
+
     steps:
       # step 1 : checkout submodule
       - name: Checkout submodule
@@ -65,7 +66,7 @@ jobs:
       # step 3: use our custom action to build the project
       - name: Build
         id: build
-        uses: ./.buildroot/phoenix-rtos-project/.github/actions/phoenix-build    # BUILD_DIRECTORY value, but we can't use templates here
+        uses: ./.buildroot/phoenix-pilot-project/.github/actions/phoenix-build    # BUILD_DIRECTORY value, but we can't use templates here
         with:
           target: ${{ matrix.target }}
           syspage: ${{ matrix.syspage }}
@@ -95,7 +96,12 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        target: ['armv7a9-zynq7000-qemu', 'host-generic-pc', 'ia32-generic-qemu', 'riscv64-generic-qemu']
+        target: ['armv7a9-zynq7000-qemu', 'host-generic-pc']
+        include:
+          - target: 'armv7a9-zynq7000-vpilot'
+            test_runner_ext: 'phoenix-pilot-core/tests/trunner_extension'
+          - target: 'host-generic-pilot'
+            test_runner_ext: 'phoenix-pilot-core/tests/trunner_extension'
 
     steps:
       - name: Checkout phoenix-rtos-project
@@ -128,6 +134,7 @@ jobs:
         uses: ./.github/actions/phoenix-runner
         with:
           target: ${{ matrix.target }}
+          extension: ${{ matrix.test_runner_ext }}
 
       - name: Upload runner results
         if: always()
@@ -142,6 +149,7 @@ jobs:
   test-hw:
     needs: build
     name: test HW
+    if: false # disable for now
     runs-on: ${{ matrix.target }}
     outputs:
       runner_result: ${{ steps.runner.outcome }}
